get rid of all of this corporate bullshit
literally we aren't affiliated with Warner Bros, GTFO tracking

--- a/index.html
+++ b/index.html
@@ -531,40 +531,6 @@
 
 <br>
 
-<!--**************Ads - Don't Touch!************************************-->
-<center><nobr>
-<table border=0 cellpadding=5 cellspacing=0><tr>
-<td align="center" colspan=3><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.top" --></td>
-</tr><tr>
-<td align="center"><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.left" --></td>
-<td align="center" width="10"></td>
-<td align="center"><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.right" --></td>
-</tr></table>
-</nobr></center>
-<!--*******************************************************************-->
-<!--**************Ads - Don't Touch!************************************-->
-<center><nobr>
-<table border=0 cellpadding=5 cellspacing=0><tr>
-<td><!--#include virtual="html.ng/site=spacejam&spacedesc=spacejam.video" --></td>
-<td><!--#include virtual="html.ng/site=spacejam&spacedesc=spacejam.soundtrack" --></td>
-</tr></table>
-</nobr></center>
-<!--*******************************************************************-->
-
-<BR>
-
-
-
-
-
-<br>
-<font class="footer-links" size="-1"><a href="https://policies.warnerbros.com/privacy/" target="_blank">Privacy Policy</a></font>
-<font class="footer-links" size="-1"><a href="#" class="optanon-toggle-display">Cookie Settings</a></font>
-<font class="footer-links" size="-1"><a href="http://policies.warnerbros.com/terms/en-us/" target="_blank">Terms</a></font>
-<font class="footer-links" size="-1"><a href="http://policies.warnerbros.com/terms/en-us/#accessibility" target="_blank">Accessibility</a></font>
-<font class="footer-links" size="-1"><a href="https://policies.warnerbros.com/privacy/en-us/#adchoices" target="_blank">AdChoices</a></font>
-<BR>
-
 
 
 
@@ -572,54 +538,13 @@
 
 
 
-<font size="-1">SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
+<font size="-1">This site is not affiliated with SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
 
 
 
 </center>
 
 
-
-<script type="text/javascript">
-    //trackOmnitureScode( 'Space Jam - Home' );
-</script>
-<script src="https://policies.warnerbros.com/js/wbPolicyUpdatedNotice.js" ></script>
-<link href="css/wbPolicyUpdatedNoticeStyle.css" rel="stylesheet">
-	
-<!-- START OMNITURE -->
-		<!-- SiteCatalyst code version: H.15.1. 
-		Copyright 1997-2008 Omniture, Inc.
-		More info available at http://www.omniture.com -->
-		<script language="JavaScript" type="text/javascript" src="https://cloud.wbpapps.com/omniture/s_code_theatrical.js"></script>
-		<script language="JavaScript" type="text/javascript">
-		<!--
-		/* You may give each page an identifying name, server, and channel on the next lines. */
-		s.pageName="Space Jam"
-		s.channel=""
-		s.prop1="Space Jam.us"
-		s.prop2=""
-		s.prop3="Space Jam Movie Site Index"
-		s.prop4=""
-		s.prop5=""
-		s.prop6=""
-		s.prop7=""
-		s.prop8=""
-		s.events=""
-		s.products=""
-		s.eVar1=""
-		s.eVar2=""
-		s.eVar3=""
-		s.eVar4=""
-		s.eVar5=""
-		/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
-		var s_code=s.t();if(s_code)document.write(s_code)//--></script>
-		<script language="JavaScript" type="text/javascript"><!--
-		if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
-		//--></script><noscript><a href="http://www.omniture.com" title="Web Analytics"><img
-		src="http://wbrostheatricalother.112.2O7.net/b/ss/wbrostheatricalother/1/H.15.1--NS/0?[AQB]&cdp=3&[AQE]"
-		height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
-		<!-- End SiteCatalyst code version: H.15.1. -->
-		<!-- END  OMNITURE -->
 
 </body>
 
