lunar tunes page and placeholder site map

--- a/cmp/jamad.html
+++ b/cmp/jamad.html
@@ -9,28 +9,19 @@
 
 <head>
 
-<title>Lunar Tunes</title>
+<title>This is the top header</title>
 
 
 </head>
 
-<body bgcolor="#000000" background="../img/bg_stars.gif" text="#ff0000" link="#ff4c4c" vlink="#ff4c4c" alink="#ff4c4c">
+<body bgcolor="#000000" background="../img/bg_stars.gif" text="#4274F6" link="#4274F6" vlink="#4274F6" alink="#4274F6">
 
-<!--**************Ads - Don't Touch!*************************************-->
+<center>
 
-<CENTER>
-<nobr>
-<table border=0 cellpadding=0 cellspacing=0 width=488 height=60>
-<tr>
-<td align="center"><!--#include virtual="html.ng/site=spacejam&type=movie&home=no&size=234&page.allowcompete=no"--></td>
-<td align="center" width="20"></td>
-<td align="center"><!--#include virtual="html.ng/site=spacejam&type=movie&home=no&size=234"--></td>
-</tr>
-</table>
-</NOBR>
+
+<h2> HAPPY 8-YEAR MOHIT</h2> -Love, 2021 Clever
+
 </center>
-<!--*******************************************************************-->
-
 
 
 
