--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@
 <center>
 
 
-
-
-
 <br>
 
 
@@ -105,10 +102,6 @@
 
 
 <td align=left>
-
-
-
-<!-- <a href="video/"><img src="img/fast.gif" width=50 height=11 border=0 align=absmiddle alt="fast"><img src="img/fastbreak.gif" align=absmiddle width=40 height=40 alt="Fast Break" border=0><img src="img/break.gif" width=50 height=11 border=0 align=absmiddle alt="fast"></a> -->
 
 
 
@@ -339,7 +332,7 @@
 	}
 </script>
 
-<audio id="spaceJAM" src="music/mohit_in_spacejam_take1.mp3"></audio>audio>
+<audio id="spaceJAM" src="music/mohit_in_spacejam_take1.mp3"></audio>
 
 
 
@@ -539,9 +532,13 @@
 
 <BR>
 
+Click the logo for sweet jams. All the planets go to somewhere, but we make no claims that this will be a valuable use of your time.
 
+<br>
+<br>
+<br>
 
-<font size="-1">This site is not affiliated with SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
+<font size="-1">This site is not affiliated with SPACE JAM and was created with the permission of absolutely nobody. </font><br>
 
 
 
