--- a/cmp/tunes/tunes.html
+++ b/cmp/tunes/tunes.html
@@ -6,12 +6,10 @@
 <title>Lunar Tunes</title>
 
 
-
-
-
 </head>
 
 <body bgcolor="#000000" background="../../img/bg_stars.gif" text="#4274F6" link="#4274F6" vlink="#4274F6" alink="#4274F6">
+
 
 
 <br>
@@ -30,19 +28,11 @@
 
 
 
-<img src="img/lunar_t.jpg" height=308 width=439 border=0 alt="navigation map" usemap="#map"><br>
+<img src=../../img/p-jamlogo.png height=165 width=272 border=0><br>
 
+<br>
 
-
-<map name="map">
-
-<area shape="poly" coords="180,205,305,205,305,184,273,184,273,124,208,124,208,186,179,186" href="soundtrackframes.html" target="_top">
-
-<area shape="rect" coords="30,106,136,173" href="radioframes.html" target="_top">
-
-</map>
-
-
+<audio src="../../music/mohit_in_spacejam_take1.mp3" controls>
 
 <br>
 
@@ -56,11 +46,12 @@
 
 
 
-<font size="+2">When you've got the world's greatest basketball superstars and the world's greatest cartoon characters facing off against space aliens, you can't skimp on the jams -- and sure enough, Warner Sunset/Atlantic Records' Space Jam:  Music From The Motion Picture is one of the most powerful collections in the universe.<br>
+<font size="+2">
+	When you're celebrating the world's greatest engineer-turned-tech-lead-turned-product-manager and everyone's favorite human, you can't skimp on the jams -- and sure enough, Clever's own #4274F6 (aka Which Blue Crew) presents Mohit in Space Jam, one of the most powerful theme songs in the universe. <br>
 
 </font><br>
 
-
+<center><a href="../../music/mohit_in_spacejam_take1.mp3" download>Download the song here</a></center>
 
 </blockquote>
 
@@ -70,59 +61,14 @@
 
 <br>
 
-<!--**************Ads - Don't Touch!************************************--> 
-
-<center><nobr>
-
-<table border=0 cellpadding=5 cellspacing=0><tr>
-
-<td align="center" colspan=3><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.top" --></td>
-
-</tr><tr>
-
-<td align="center"><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.left" --></td>
-
-<td align="center" width="10"></td>
-
-<td align="center"><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.right" --></td>
-
-</tr></table>
-
-</nobr></center>
-
-<!--*******************************************************************-->
-
-<!--**************Ads - Don't Touch!************************************--> 
-
-<center><nobr>
-
-<table border=0 cellpadding=5 cellspacing=0><tr>
-
-<td><!--#include virtual="html.ng/site=spacejam&spacedesc=spacejam.video" --></td>
-
-<td><!--#include virtual="html.ng/site=spacejam&spacedesc=spacejam.soundtrack" --></td>
-
-</tr></table>
-
-</nobr></center>
-
-<!--*******************************************************************-->
-
 <br>
 
-<font size="-1" color="#ffff00">SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
+<font size="-1" color="#4274F6">SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
 
 </center>
 
 
 
-
-
-
-
-<script type="text/javascript">
-	//trackOmnitureScode( 'Space Jam - movie-cmp-tunes-tunes' );
-</script>
 
 </body>
 
