--- a/cmp/sitemap.html
+++ b/cmp/sitemap.html
@@ -44,12 +44,7 @@
 Jam Central is the main repository for all basic information about <b>Space Jam</b>. Here you can find the film's production notes, information about the filmmakers, and a Quicktime version of the theatrical trailer. Different photos from the film are also posted and replaced with new ones every week.
 </td>
 
-<td valign=top>
-<a href="jamcentral/filmmakersframes.html">The Filmmakers</a><br>
-<a href="jamcentral/prodnotesframes.html">Production Notes</a><br>
-<a href="jamcentral/photosframes.html">Photos from the Film</a><br>
-<a href="jamcentral/trailerframes.html">The Trailer</a><br>
-</td>
+
 
 </tr>
 
@@ -63,12 +58,6 @@ Jam Central is the main repository for all basic information about <b>Space Jam<
 Go behind the scenes of <b>Space Jam</b>. See how the new characters were developed; look at examples of how the animation was put together. You can also view Quicktime clips of b-roll footage and read extensive notes on the technical processes involved in <b>Space Jam</b>'s unique blend of live action and animation.
 </td>
 
-<td valign=top>
-<a href="behind/chardevelopmentframes.html">Character Development</a><br>
-<a href="behind/sketchesframes.html">Animation Sketches</a><br>
-<a href="behind/brollframes.html">Behind-the-Scenes Footage</a><br>
-<a href="behind/techframes.html">Tech Notes</a><br>
-</td>
 
 </tr>
 
@@ -81,13 +70,7 @@ Go behind the scenes of <b>Space Jam</b>. See how the new characters were develo
 <td valign=top>
 An area of the site reserved especially for kids, Junior Jam is full of games, information about the Looney Tunes, photos from the film and basketball tips. Also included is a printable coloring book to keep them busy offline when you need to use the computer. 
 
-<td valign=top>
-<a href="junior/coloringframes.html">The Coloring Book</a><br>
-<a href="junior/juniorbiosframes.html">Meet the Characters</a><br>
-<a href="junior/bballtipsframes.html">Basketball Tips &amp; Terms</a><br>
-<a href="junior/neatstuffframes.html">Neat Stuff to Look At</a><br>
-<a href="junior/gamesframes.html">Games</a><br>
-</td>
+
 
 </tr>
 
@@ -97,16 +80,10 @@ An area of the site reserved especially for kids, Junior Jam is full of games, i
 </td>
 
 <td valign=top>
-<b>Space Jam</b>'s lineup -- the real-live cast, the real-live basketball stars, and the not-so-<wbr>real-live Looney Tunes and Monstars. See if you know your stuff and take our Looney Tunes Trivia Quiz.
+<b>Mohit's</b>'s timeline -- the slides, the quotes, the WOO that we've shared through the years. See the slides that Josh copied into the Friday Assembly deck.
 </td>
 
-<td valign=top>
-<a href="lineup/looneybiosframes.html">Looney Tunes Bios</a><br>
-<a href="lineup/playerbiosframes.html">Player Bios</a><br>
-<a href="lineup/castbiosframes.html">Cast Bios</a><br>
-<a href="lineup/badguysframes.html">The Bad Guys</a><br>
-<a href="lineup/quizframes.html">Trivia Quiz</a><br>
-</td>
+
 
 </tr>
 
@@ -120,9 +97,7 @@ An area of the site reserved especially for kids, Junior Jam is full of games, i
 Atlantic Records presents the soundtrack to <b>Space Jam</b> -- see the artists, hear the songs, and get ready to jam to the soundtrack.
 </td>
 
-<td valign=top>
-<a href="tunes/soundtrackframes.html">The Soundtrack</a>
-</td>
+
 
 </tr>
 
@@ -136,12 +111,7 @@ Atlantic Records presents the soundtrack to <b>Space Jam</b> -- see the artists,
 On Planet B-Ball, you can find out about the NBA players featured in <b>Space Jam</b>, check out Quicktime VRs of the Jordan Dome, view behind-the-scenes Quicktime clips of the basketball sequences being shot, and link on out to the NBA.
 </td>
 
-<td valign=top>
-<a href="bball/playerbiosframes.html">Player Bios</a><br>
-<a href="bball/brollbballframes.html">Shooting Hoops</a><br>
-<a href="bball/qtvrframes.html">QTVR of the Jordan Dome</a><br>
-<a href="bball/nbaframes.html">The NBA</a><br>
-</td>
+
 
 </tr>
 
@@ -154,14 +124,7 @@ On Planet B-Ball, you can find out about the NBA players featured in <b>Space Ja
 Get your 'Jam junk right here. Download sound clips and desktop patterns, send electronic postcards via the Internet, pick up a new screen saver, steal our promo posters, and -- for Mac users only (sorry) -- get a cool new Netscape browser icon.
 </td>
 
-<td valign=top>
-<a href="souvenirs/clipsframes.html">Sound Clips</a><br>
-<a href="souvenirs/patternsframes.html">Backboard Patterns</a><br>
-<a href="souvenirs/postcardsframes.html">Postcards</a><br>
-<a href="souvenirs/screensaverframes.html">Screensavers</a><br>
-<a href="souvenirs/iconsframes.html">Browser Icons</a><br>
-<a href="souvenirs/postersframes.html">Posters</a><br>
-</td>
+
 
 </tr>
 
@@ -174,38 +137,28 @@ Get your 'Jam junk right here. Download sound clips and desktop patterns, send e
 Your central location for fulfilling all of your <b>Space Jam</b> linking needs. Jump to other Warner Bros. sites, as well as those of our promotional partners.
 </td>
 
-<td valign=top>
-<a href="jump/linksframes.html">Links</a><br>
-<a href="jump/promotionalframes.html">Promotional Partners</a><br>
-<a href="jump/wblinksframes.html">Warner Bros. Links</a><br>
-</td>
 
 </tr>
 
 <tr>
 <td align=center valign=top>
-<a href="pressbox/pressboxframes.html" target="_top"><img src="../img/pn-pressbox.gif"  height=44 width=70 alt="press box" border=0></a>
+<a href="https://mohitinspace.com" target="_top"><img src="../img/pn-pressbox.gif"  height=44 width=70 alt="OG Mohit in Space" border=0></a>
 </td>
 
 <td valign=middle>
-Click over here to find out all the latest on <b>Space Jam</b> and this site.
+Click over here to see the original <b>Mohit in Space</b>.
 </td>
 
-<td valign=top>
-</td>
 
 </tr>
 
 <tr>
 <td align=center valign=top>
-<a href="http://www.studiostores.warnerbros.com/" target="_top"><img src="../img/pn-studiostore.gif"  height=53 width=70 alt="studio store" border=0></a>
+<a href="http://www.spacejam.com/" target="_top"><img src="../img/pn-studiostore.gif"  height=53 width=70 alt="OG Space Jam" border=0></a>
 </td>
 
 <td valign=middle>
-The store with more of the Looney stuff you ask for.
-</td>
-
-<td valign=top>
+The original Space Jam website from 1996 is still up and running!
 </td>
 
 </tr>
@@ -219,8 +172,6 @@ The store with more of the Looney stuff you ask for.
 Keep your eye out for our Fast Breaks -- special updates about <b>Space Jam</b>, the movie and the web site.
 </td>
 
-<td valign=top>
-</td>
 
 </tr>
 
@@ -234,8 +185,7 @@ Keep your eye out for our Fast Breaks -- special updates about <b>Space Jam</b>,
 Here you are.
 </td>
 
-<td valign=top>
-</td>
+
 </td>
 
 </tr>
@@ -249,8 +199,6 @@ Here you are.
 Never on the Internet have so few worked so hard to bring you so much in so little time.
 </td>
 
-<td valign=top>
-</td>
 
 </tr>
 </table>
