all the content is done so i'm not doing any more

--- a/cmp/behind/behindframes.html
+++ b/cmp/behind/behindframes.html
@@ -2,12 +2,11 @@
 <html>
 
 
-
 <head>
 
 
 
-<title>The Lineup</title>
+<title>Behind the Jam</title>
 
 
 
@@ -28,7 +27,11 @@
 
 
 
-You have a non-frames compatible browser. Please <a href="tunesnoframes.html">click here.</a><br>
+
+You have a non-frames compatible browser. Please <a href="behindnoframes.html">click here.</a><br>
+
+
+
 
 
 
@@ -42,21 +45,27 @@ You have a non-frames compatible browser. Please <a href="tunesnoframes.html">cl
 
 <frameset cols="100,*">
 
+
+
 <frame name="corner" src="../corner.html" marginwidth=0 marginheight=0 scrolling="no" noresize>
+
 
 
 <frame name="top" src="../jamad.html" marginwidth=0 marginheight=0 scrolling="no" noresize>
 
 
+
+</frameset>
+
+
+
+<frame name="main" src="behind.html" marginwidth=0 marginheight=0 scrolling="auto" noresize>
+
+
+
 </frameset>
 
 
-
-<frame name="main" src="lineup.html" marginwidth=0 marginheight=0 scrolling="auto" noresize>
-
-
-
-</frameset>
 
 
 
