--- a/cmp/lineup/lineup.html
+++ b/cmp/lineup/lineup.html
@@ -1,10 +1,6 @@
 
 <html>
 
-<!-- Copyright 1996 Warner Bros. Online -->
-
-<!-- I programmed my home computer to beam myself into the future. -->
-
 <head>
 
 <title>The Lineup</title>
@@ -30,44 +26,13 @@
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTRcSTXUdsKZXzEGU4T-pBteKZE2W39aov_qwhSxy_OKoVLMj18hlVBk2taiyFhBX8qmfFlyIZOnzKK/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <br>
+<br>
+
+<font size="-1">This site is not affiliated with SPACE JAM and was created with the permission of absolutely nobody. </font><br>
 
 </center>
 
 
-</blockquote>
-
-<center>
-<br>
-<!--**************Ads - Don't Touch!************************************--> 
-<center><nobr>
-<table border=0 cellpadding=5 cellspacing=0><tr>
-<td align="center" colspan=3><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.top" --></td>
-</tr><tr>
-<td align="center"><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.left" --></td>
-<td align="center" width="10"></td>
-<td align="center"><!--#include virtual="/html.ng/site=spacejam&spacedesc=button.right" --></td>
-</tr></table>
-</nobr></center>
-<!--*******************************************************************-->
-<!--**************Ads - Don't Touch!************************************--> 
-<center><nobr>
-<table border=0 cellpadding=5 cellspacing=0><tr>
-<td><!--#include virtual="html.ng/site=spacejam&spacedesc=spacejam.video" --></td>
-<td><!--#include virtual="html.ng/site=spacejam&spacedesc=spacejam.soundtrack" --></td>
-</tr></table>
-</nobr></center>
-<!--*******************************************************************-->
-<br>
-<font size="-1" color="#ffff00">SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
-</center>
-
-
-
-
-
-<script type="text/javascript">
-	//trackOmnitureScode( 'Space Jam - movie-cmp-lineup-lineup' );
-</script>
 
 </body>
 </html>
