--- a/cmp/sitemap.html
+++ b/cmp/sitemap.html
@@ -1,10 +1,6 @@
 
 <html>
 
-<!-- Copyright 1996 Warner Bros. Online -->
-
-<!-- The Sitemap, for those unable to figure out the site. -->
-
 <head>
 
 <title>The Sitemap</title>
@@ -37,11 +33,11 @@
 <tr>
 
 <td align=center valign=middle>
-<a href="jamcentral/jamcentralframes.html" target="_top"><img src="../img/pn-jamcentral.gif" height=49 width=70 alt="jam central" border=0></a>
+<a href="https://youtube.com/playlist?list=PLgBXV6wthby6PUcSGKWefnQvR5eHJ1ekC" target="_top"><img src="../img/pn-jamcentral.gif" height=49 width=70 alt="jam central" border=0></a>
 </td>
 
 <td valign=middle>
-Jam Central is the main repository for all basic information about <b>Space Jam</b>. Here you can find the film's production notes, information about the filmmakers, and a Quicktime version of the theatrical trailer. Different photos from the film are also posted and replaced with new ones every week.
+Curious about other Clever bops? Check out this playlist of music videos created by Cleverites!
 </td>
 
 
@@ -55,7 +51,7 @@ Jam Central is the main repository for all basic information about <b>Space Jam<
 </td>
 
 <td valign=top>
-Go behind the scenes of <b>Space Jam</b>. See how the new characters were developed; look at examples of how the animation was put together. You can also view Quicktime clips of b-roll footage and read extensive notes on the technical processes involved in <b>Space Jam</b>'s unique blend of live action and animation.
+Go behind the scenes of <b>Mohit in Space Jam</b>. See how this site was pitched, how we made the song, and think to yourself 'what a bunch of tryhards'
 </td>
 
 
@@ -64,11 +60,11 @@ Go behind the scenes of <b>Space Jam</b>. See how the new characters were develo
 <tr>
 
 <td align=center valign=middle>
-<a href="junior/juniorframes.html" target="_top"><img src="../img/pn-junior.gif"  height=44 width=70 alt="junior jam" border=0></a>
+<a href="signupgetclever.com" target="_top"><img src="../img/pn-junior.gif"  height=44 width=70 alt="Get Clever" border=0></a>
 </td>
 
 <td valign=top>
-An area of the site reserved especially for kids, Junior Jam is full of games, information about the Looney Tunes, photos from the film and basketball tips. Also included is a printable coloring book to keep them busy offline when you need to use the computer. 
+If you're looking for kid-friendly content, check out <b>Get Clever</b>, fun and educational learning games for kids!
 
 
 
@@ -94,7 +90,7 @@ An area of the site reserved especially for kids, Junior Jam is full of games, i
 </td>
 
 <td valign=top>
-Atlantic Records presents the soundtrack to <b>Space Jam</b> -- see the artists, hear the songs, and get ready to jam to the soundtrack.
+Which Blue Crew presents "Mohit in Space Jam", the theme song to Mohit's 8-year Clever celebration -- listen to the song, download the song, and nothing else.
 </td>
 
 
@@ -104,11 +100,11 @@ Atlantic Records presents the soundtrack to <b>Space Jam</b> -- see the artists,
 <tr>
 
 <td align=center valign=middle>
-<a href="bball/bballframes.html" target="_top"><img src="../img/pn-bball.gif"  height=47 width=70 alt="planet b-ball" border=0></a>
+<a href="https://clever.com" target="_top"><img src="../img/pn-bball.gif"  height=47 width=70 alt="planet b-ball" border=0></a>
 </td>
 
 <td valign=middle>
-On Planet B-Ball, you can find out about the NBA players featured in <b>Space Jam</b>, check out Quicktime VRs of the Jordan Dome, view behind-the-scenes Quicktime clips of the basketball sequences being shot, and link on out to the NBA.
+Confused about who Clever is? You're not the only one! Clever can refer to a rapper, an interior design company, or even confused with cleavers or Clevver. But in this case it refers to Clever Inc., an education technology company and platform. It's where Mohit works! Clever is a real company that provides real services, and this is our website. It also funds the lives of people who like to create inane jokes like this website to celebrate their coworkers. We're hiring!
 </td>
 
 
@@ -130,11 +126,11 @@ Get your 'Jam junk right here. Download sound clips and desktop patterns, send e
 
 <tr>
 <td align=center valign=middle>
-<a href="jump/jumpframes.html" target="_top"><img src="../img/pn-jump.gif"  height=40 width=70 alt="jump station" border=0></a>
+<a href="https://mohitgupta.me" target="_top"><img src="../img/pn-jump.gif"  height=40 width=70 alt="jump station" border=0></a>
 </td>
 
 <td valign=top>
-Your central location for fulfilling all of your <b>Space Jam</b> linking needs. Jump to other Warner Bros. sites, as well as those of our promotional partners.
+Your central location for fulfilling all of your <b>Mohit</b> linking needs. Jump to his personal website.
 </td>
 
 
@@ -163,18 +159,6 @@ The original Space Jam website from 1996 is still up and running!
 
 </tr>
 
-<tr>
-<td align=center valign=top>
-<a href="pressbox/pressboxframes.html" target="_top"><img src="../img/fast2.gif"  height=11 width=34  border=0><BR><img src="../img/fastbreak.gif" vspace=5 height=40 width=40 alt="Fast Break" border=0><BR> <img src="../img/break.gif"  height=11 width=50  border=0><BR></a>
-</td>
-
-<td valign=middle>
-Keep your eye out for our Fast Breaks -- special updates about <b>Space Jam</b>, the movie and the web site.
-</td>
-
-
-</tr>
-
 
 <tr>
 <td align=center valign=top>
@@ -182,7 +166,10 @@ Keep your eye out for our Fast Breaks -- special updates about <b>Space Jam</b>,
 </td>
 
 <td valign=middle>
-Here you are.
+Mohit in space [jam],how sweet the sound <br>
+that turnt a Cleverversary<br>
+I once was lost,but now am found<br>
+was hype but now I sleep<br>
 </td>
 
 
@@ -216,7 +203,7 @@ Never on the Internet have so few worked so hard to bring you so much in so litt
 <br>
 
 <br>
-<font size="-1" color="#ff0000">SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
+<font size="-1">This site is not affiliated with SPACE JAM and was created with the permission of absolutely nobody. </font><br>
 </center>
 
 
