--- a/cmp/souvenirs/souvenirsframes.html
+++ b/cmp/souvenirs/souvenirsframes.html
@@ -7,7 +7,9 @@
 
 
 
-<title>The Lineup</title>
+<title>Stellar Souvenirs</title>
+
+
 
 
 
@@ -28,12 +30,13 @@
 
 
 
-You have a non-frames compatible browser. Please <a href="tunesnoframes.html">click here.</a><br>
+You have a non-frames compatible browser. Please <a href="souvenirsnoframes.html">click here.</a><br>
 
 
 
 
 </body>
+
 
 
 </noframes>
@@ -44,15 +47,15 @@ You have a non-frames compatible browser. Please <a href="tunesnoframes.html">cl
 
 <frame name="corner" src="../corner.html" marginwidth=0 marginheight=0 scrolling="no" noresize>
 
-
 <frame name="top" src="../jamad.html" marginwidth=0 marginheight=0 scrolling="no" noresize>
+
 
 
 </frameset>
 
 
 
-<frame name="main" src="lineup.html" marginwidth=0 marginheight=0 scrolling="auto" noresize>
+<frame name="main" src="souvenirs.html" marginwidth=0 marginheight=0 scrolling="auto" noresize>
 
 
 
