--- a/cmp/tunes/tunes.html
+++ b/cmp/tunes/tunes.html
@@ -51,7 +51,10 @@
 
 </font><br>
 
-<center><a href="../../music/mohit_in_spacejam_take1.mp3" download>Download the song here</a></center>
+<center>
+	<a href="../../music/mohit_in_spacejam_take1.mp3" download>Download the song here</a><br>
+	<a href="https://docs.google.com/document/d/1bjHm-2sUfBoR6KD19kSkjg2n4PHKDCWqkBCw_wwznz8/edit?usp=sharing">Check out the lyrics here</a>
+</center>
 
 </blockquote>
 
@@ -63,7 +66,7 @@
 
 <br>
 
-<font size="-1" color="#4274F6">SPACE JAM, characters, names, and all related<br>indicia are trademarks of Warner Bros. &copy; 1996</font><br>
+<font size="-1" color="#4274F6">This site is not affiliated with SPACE JAM and was created with the permission of absolutely nobody. </font><br></font><br>
 
 </center>
 
