--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 
 
-<a href="cmp/jamcentral/jamcentralframes.html"><img src="img/p-jamcentral.gif" height=67 width=55 alt="Jam Central" border=0></a>
+<a href="https://youtube.com/playlist?list=PLgBXV6wthby6PUcSGKWefnQvR5eHJ1ekC"><img src="img/p-jamcentral.gif" height=67 width=55 alt="Jam Central" border=0></a>
 
 
 
@@ -237,7 +237,7 @@
 
 
 
-<a href="cmp/bball/bballframes.html"><img src="img/p-bball.gif" height=62 width=62 alt="Planet B-Ball" border=0></a>
+<a href="https://clever.com"><img src="img/p-bball.gif" height=62 width=62 alt="Planet B-Ball" border=0></a>
 
 
 
@@ -341,7 +341,7 @@
 
 
 
-<a href="cmp/jump/jumpframes.html"><img src="img/p-jump.gif" height=52 width=58 alt="Jump Station" border=0></a>
+<a href="https://mohitgupta.me"><img src="img/p-jump.gif" height=52 width=58 alt="Jump Station" border=0></a>
 
 
 
@@ -373,7 +373,7 @@
 
 
 
-<a href="cmp/junior/juniorframes.html"><img src="img/p-junior.gif" height=57 width=49 alt="Junior Jam" border=0></a>
+<a href="https://signupgetclever.com"><img src="img/p-junior.gif" height=57 width=49 alt="Junior Jam" border=0></a>
 
 
 
