ope the sitemap needs to be updated

--- a/cmp/sitemap.html
+++ b/cmp/sitemap.html
@@ -117,7 +117,7 @@ Confused about who Clever is? You're not the only one! Clever can refer to a rap
 </td>
 
 <td valign=top>
-Get your 'Jam junk right here. Download sound clips and desktop patterns, send electronic postcards via the Internet, pick up a new screen saver, steal our promo posters, and -- for Mac users only (sorry) -- get a cool new Netscape browser icon.
+Do you want s'mo Mo? Click here.
 </td>
 
 
